--- a/AllstateCarProject/Base.lproj/Main.storyboard
+++ b/AllstateCarProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dUR-lG-wlW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dUR-lG-wlW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -153,7 +153,7 @@
                                 <rect key="frame" x="0.0" y="92" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="i3u-Zo-Rlg" id="gcY-0T-apt">
-                                    <rect key="frame" x="0.0" y="0.0" width="381" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="381" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -390,7 +390,7 @@
         <!--History-->
         <scene sceneID="asH-RX-XjS">
             <objects>
-                <navigationController id="4yw-V9-RyX" userLabel="History" customClass="UITabl" sceneMemberID="viewController">
+                <navigationController id="4yw-V9-RyX" userLabel="History" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="history" id="dJf-q4-qz4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vh4-sh-Vfs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -416,7 +416,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="F095DAE7-FFE6-4526-ABED-1F80864DE8F1" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-Aa-Wr9">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="08C9FA99-FB2B-4F43-84EE-BC6BDD9E79A3" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-Aa-Wr9">
                                 <rect key="frame" x="6" y="72" width="142" height="176"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Badge" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U4h-Nu-jk5">
@@ -479,7 +479,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ymW-vY-zzE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1073" y="1087"/>
+            <point key="canvasLocation" x="607" y="1125"/>
         </scene>
         <!--More-->
         <scene sceneID="pHh-0f-YQ9">
@@ -722,7 +722,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P1Y-nj-vpR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-511" y="2018"/>
+            <point key="canvasLocation" x="-811" y="2032"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="lLF-ft-txm">
@@ -754,7 +754,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hbC-6L-CxZ">
-                            <size key="itemSize" width="125" height="180"/>
+                            <size key="itemSize" width="100" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -765,31 +765,50 @@
                         </imageView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="badgeCell" id="fS8-bx-TFl" customClass="BadgeCell" customModule="AllstateCarProject" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="125" height="180"/>
+                                <rect key="frame" x="0.0" y="64" width="100" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="125" height="180"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="hnE-Te-saK">
-                                            <rect key="frame" x="8" y="0.0" width="109" height="98"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="hnE-Te-saK">
+                                            <rect key="frame" x="8" y="8" width="84" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="80" id="C5w-kI-atb"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRd-8a-5v3">
-                                            <rect key="frame" x="14" y="130" width="77" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emoticons" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRd-8a-5v3">
+                                            <rect key="frame" x="8" y="138" width="84" height="33.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RU6-3H-t5U">
-                                            <rect key="frame" x="8" y="93" width="109" height="46"/>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RU6-3H-t5U">
+                                            <rect key="frame" x="8" y="88" width="84" height="50"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="A8g-US-K67"/>
+                                            </constraints>
+                                            <string key="text">Name 1
+Name 2</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="hnE-Te-saK" firstAttribute="leading" secondItem="fS8-bx-TFl" secondAttribute="leadingMargin" id="0v6-er-aq1"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="MRd-8a-5v3" secondAttribute="trailing" id="Syp-vR-ibo"/>
+                                    <constraint firstItem="hnE-Te-saK" firstAttribute="top" secondItem="fS8-bx-TFl" secondAttribute="topMargin" id="Yjd-ne-YKT"/>
+                                    <constraint firstItem="RU6-3H-t5U" firstAttribute="leading" secondItem="fS8-bx-TFl" secondAttribute="leadingMargin" id="aKO-sa-V4o"/>
+                                    <constraint firstItem="RU6-3H-t5U" firstAttribute="top" secondItem="hnE-Te-saK" secondAttribute="bottom" id="eZf-rn-EeM"/>
+                                    <constraint firstItem="MRd-8a-5v3" firstAttribute="top" secondItem="RU6-3H-t5U" secondAttribute="bottom" id="fCu-xz-5sQ"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="hnE-Te-saK" secondAttribute="trailing" id="orx-CV-cXK"/>
+                                    <constraint firstItem="MRd-8a-5v3" firstAttribute="bottom" secondItem="fS8-bx-TFl" secondAttribute="bottomMargin" id="sG8-Wj-Km9"/>
+                                    <constraint firstItem="MRd-8a-5v3" firstAttribute="leading" secondItem="fS8-bx-TFl" secondAttribute="leadingMargin" id="xkX-jJ-yi3"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="RU6-3H-t5U" secondAttribute="trailing" id="yft-XS-kQr"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="badgeEmoticonLabel" destination="MRd-8a-5v3" id="fir-Rc-Bcg"/>
                                     <outlet property="badgeImage" destination="hnE-Te-saK" id="Tzf-eQ-clZ"/>
@@ -810,7 +829,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="46m-mM-NA6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="580" y="1087"/>
+            <point key="canvasLocation" x="35" y="1125"/>
         </scene>
         <!--Badges-->
         <scene sceneID="glP-L1-u00">
@@ -829,16 +848,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dYF-o2-X1P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-48" y="1037"/>
+            <point key="canvasLocation" x="-501" y="1125"/>
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="512" height="512"/>
-        <image name="CarIcon" width="30" height="30"/>
-        <image name="F095DAE7-FFE6-4526-ABED-1F80864DE8F1" width="512" height="512">
+        <image name="08C9FA99-FB2B-4F43-84EE-BC6BDD9E79A3" width="512" height="512">
             <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
-GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
+YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
+GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
 c1dOU0NvbG9ygAKADRIgwAAAgAOAC1p7NTEyLCA1MTJ90hUKFhhaTlMub2JqZWN0c6EXgASACtIVChod
 ohscgAWABoAJEADSIAohIl8QFE5TVElGRlJlcHJlc2VudGF0aW9ugAeACE8SABAIrk1NACoAEAAIAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -18354,17 +18371,19 @@ aQBsAGUARwBlAG4AZQByAGUAbAAgAFIARwBCAC0AYgBlAHMAawByAGkAdgBlAGwAcwBldGV4dAAAAABD
 b3B5cmlnaHQgMjAwNyBBcHBsZSBJbmMuLCBhbGwgcmlnaHRzIHJlc2VydmVkLgBYWVogAAAAAAAA81IA
 AQAAAAEWz1hZWiAAAAAAAAB0TQAAPe4AAAPQWFlaIAAAAAAAAFp1AACscwAAFzRYWVogAAAAAAAAKBoA
 ABWfAAC4NmN1cnYAAAAAAAAAAQHNAABzZjMyAAAAAAABDEIAAAXe///zJgAAB5IAAP2R///7ov///aMA
-AAPcAADAbNIlJicoWiRjbGFzc25hbWVYJGNsYXNzZXNfEBBOU0JpdG1hcEltYWdlUmVwoykqK18QEE5T
-Qml0bWFwSW1hZ2VSZXBaTlNJbWFnZVJlcFhOU09iamVjdNIlJi0uV05TQXJyYXmiLSvSJSYwMV5OU011
-dGFibGVBcnJheaMwLSvTMzQKNTY3V05TV2hpdGVcTlNDb2xvclNwYWNlRDAgMAAQA4AM0iUmOTpXTlND
-b2xvcqI5K9IlJjw9V05TSW1hZ2WiPCtfEA9OU0tleWVkQXJjaGl2ZXLRQEFUcm9vdIABAAAACAAAABEA
-AAAaAAAAIwAAAC0AAAAyAAAANwAAAEYAAABMAAAAVwAAAF4AAABlAAAAcgAAAHkAAACBAAAAgwAAAIUA
-AACKAAAAjAAAAI4AAACZAAAAngAAAKkAAACrAAAArQAAAK8AAAC0AAAAtwAAALkAAAC7AAAAvQAAAL8A
-AADEAAAA2wAAAN0AAADfABAJkwAQCZgAEAmjABAJrAAQCb8AEAnDABAJ1gAQCeEAEAnqABAJ7wAQCfcA
-EAn6ABAJ/wAQCg4AEAoSABAKGQAQCiEAEAouABAKMwAQCjUAEAo3ABAKPAAQCkQAEApHABAKTAAQClQA
-EApXABAKaQAQCmwAEApxAAAAAAAABAEAAAAAAAAAQgAAAAAAAAAAAAAAAAAQCnM
+AAPcAADAbNIlJicoWiRjbGFzc25hbWVYJGNsYXNzZXNfEBBOU0JpdG1hcEltYWdlUmVwoycpKlpOU0lt
+YWdlUmVwWE5TT2JqZWN00iUmLC1XTlNBcnJheaIsKtIlJi8wXk5TTXV0YWJsZUFycmF5oy8sKtMyMwo0
+NTZXTlNXaGl0ZVxOU0NvbG9yU3BhY2VEMCAwABADgAzSJSY4OVdOU0NvbG9yojgq0iUmOzxXTlNJbWFn
+ZaI7Kl8QD05TS2V5ZWRBcmNoaXZlctE/QFRyb290gAEAAAAIAAAAEQAAABoAAAAjAAAALQAAADIAAAA3
+AAAARgAAAEwAAABXAAAAXgAAAGUAAAByAAAAeQAAAIEAAACDAAAAhQAAAIoAAACMAAAAjgAAAJkAAACe
+AAAAqQAAAKsAAACtAAAArwAAALQAAAC3AAAAuQAAALsAAAC9AAAAvwAAAMQAAADbAAAA3QAAAN8AEAmT
+ABAJmAAQCaMAEAmsABAJvwAQCcMAEAnOABAJ1wAQCdwAEAnkABAJ5wAQCewAEAn7ABAJ/wAQCgYAEAoO
+ABAKGwAQCiAAEAoiABAKJAAQCikAEAoxABAKNAAQCjkAEApBABAKRAAQClYAEApZABAKXgAAAAAAAAQB
+AAAAAAAAAEEAAAAAAAAAAAAAAAAAEApgA
 </mutableData>
         </image>
+        <image name="1" width="512" height="512"/>
+        <image name="CarIcon" width="30" height="30"/>
         <image name="StarIcon" width="30" height="30"/>
         <image name="bgroad" width="1632" height="1232"/>
     </resources>
